--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,8 @@
     "resolveJsonModule": true,
     "esModuleInterop": false
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "dist"],
+  "compilerOptions": {
+    "outDir": "./dist"
+  }
 }
